Opcion sin Pair Programming
Se agrega la estructura de como seria el menu sin tener contacto con Pair Programming

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="menu-icon"></div>
         <div class="menu-list">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Primera opcion</li>
+                <li>Segunda opcion</li>
+                <li>Tercera opcion</li>
             </ul>
         </div>
     </div>
