Se agrega menus y submenus con sus respectivas opciones. Co-authored-by: Jhonny Castro Clavijo <johnnycastro72@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <div class="menu">
         <div class="menu-icon"></div>
         <div class="menu-list">
-            <ul>
+            <ul class="menu-profile">
+                <li>Primera opcion</li>
+                <li>Segunda opcion</li>
+                <li>Tercera opcion</li>
+                <li>Cuarta opcion</li>
+            </ul>
+            <ul class="menu-sales">
+                <li>Primera opcion</li>
+                <li>Segunda opcion</li>
+            </ul>
+            <ul class="menu-report">
                 <li>Primera opcion</li>
                 <li>Segunda opcion</li>
                 <li>Tercera opcion</li>
